Fixing broken css rule for a:hover - attempt #2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ a {
     color: #2B65EC;
     text-decoration: none;
 }
-a:hover {
+a:hover,a:focus {
     color: #343d46;
     text-weight: normal;
 }
